--- a/plugins/slick.headerbuttons.css
+++ b/plugins/slick.headerbuttons.css
@@ -11,7 +11,7 @@
 
 .slick-header-button {
     display: inline-block;
-    float: left;
+    float: right;
     vertical-align: top;
     margin: 1px;
     /**
